{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 81,
  "lineage": "cd932b1d-f37a-2225-c3e0-9b21eefde74b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:loadbalancer/app/ecs-load-balancer/6132452023030f4e",
            "arn_suffix": "app/ecs-load-balancer/6132452023030f4e",
            "dns_name": "ecs-load-balancer-1097087500.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:loadbalancer/app/ecs-load-balancer/6132452023030f4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-0ad4f5c5b52400e59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06e4ee977834f3d17"
              },
              {
                "subnet_id": "subnet-09d6266a07eb45031"
              }
            ],
            "subnets": [
              "subnet-06e4ee977834f3d17",
              "subnet-09d6266a07eb45031"
            ],
            "tags": {
              "Name": "ecs-load-balancer"
            },
            "vpc_id": "vpc-0aad44ec2216b492b",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:listener/app/ecs-load-balancer/6132452023030f4e/9ae93495c145e883",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:targetgroup/ecs-target-group/1dc5ad8e3f395d92",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:listener/app/ecs-load-balancer/6132452023030f4e/9ae93495c145e883",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:loadbalancer/app/ecs-load-balancer/6132452023030f4e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ecs-load-balancer",
            "aws_alb_target_group.ecs-target-group",
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:targetgroup/ecs-target-group/1dc5ad8e3f395d92",
            "arn_suffix": "targetgroup/ecs-target-group/1dc5ad8e3f395d92",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:706868765311:targetgroup/ecs-target-group/1dc5ad8e3f395d92",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:internet-gateway/igw-0f493cbaac1676479",
            "id": "igw-0f493cbaac1676479",
            "owner_id": "706868765311",
            "tags": {
              "Name": "test_ig"
            },
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_sn_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:route-table/rtb-0608fa4b38cd1c550",
            "id": "rtb-0608fa4b38cd1c550",
            "owner_id": "706868765311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f493cbaac1676479",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_public_sn_rt_01"
            },
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_sn_rt_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:route-table/rtb-0fc6a28918830b558",
            "id": "rtb-0fc6a28918830b558",
            "owner_id": "706868765311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f493cbaac1676479",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_public_sn_rt_02"
            },
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_sn_rt_01_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c22c390a6335b32",
            "route_table_id": "rtb-0608fa4b38cd1c550",
            "subnet_id": "subnet-09d6266a07eb45031"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_route_table.test_public_sn_rt_01",
            "aws_subnet.test_public_sn_01",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_sn_rt_assn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03be926c9afc0e0b1",
            "route_table_id": "rtb-0fc6a28918830b558",
            "subnet_id": "subnet-06e4ee977834f3d17"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_route_table.test_public_sn_rt_02",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:security-group/sg-0ad4f5c5b52400e59",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad4f5c5b52400e59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test_public_sg",
            "name_prefix": "",
            "owner_id": "706868765311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:subnet/subnet-09d6266a07eb45031",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.16.1.0/24",
            "id": "subnet-09d6266a07eb45031",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706868765311",
            "tags": {
              "Name": "test_public_sn_01"
            },
            "tags_all": {
              "Name": "test_public_sn_01"
            },
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:subnet/subnet-06e4ee977834f3d17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.16.2.0/24",
            "id": "subnet-06e4ee977834f3d17",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706868765311",
            "tags": {
              "Name": "test_public_sn_02"
            },
            "tags_all": {
              "Name": "test_public_sn_02"
            },
            "vpc_id": "vpc-0aad44ec2216b492b"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:706868765311:vpc/vpc-0aad44ec2216b492b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-086e834e0a013d45d",
            "default_route_table_id": "rtb-0d11fd8a5017df258",
            "default_security_group_id": "sg-0bb14a253b511ff57",
            "dhcp_options_id": "dopt-e7710480",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aad44ec2216b492b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d11fd8a5017df258",
            "owner_id": "706868765311",
            "tags": {
              "Name": "TEST_VPC"
            },
            "tags_all": {
              "Name": "TEST_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}